[package]
name = "ssh-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russh = { path = "../russh/russh" }
russh-keys = { path = "../russh/russh-keys" }
futures = "0.3.21"
tokio = { version = "1.20.1", features = ["full", "tracing"] }
anyhow = "1.0.58"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
async-trait = "0.1.57"
console-subscriber = "0.1.7"
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ["json"] }
tracing-appender = "0.2.2"
clap = { version = "3.2.17", features = ["derive"] }
lazy_static = "1.4.0"

