[package]
name = "common-port-forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
console-subscriber = "0.1.7"
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ["json"] }
tracing-appender = "0.2.2"