[package]
name = "russh-port-forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.57"
common-port-forward = { path = "../common" }
futures = "0.3.21"
russh = { path = "../../russh/russh", features = ["vendored-openssl"] }
russh-keys = { path = "../../russh/russh-keys", features = ["vendored-openssl"] }
tokio = { version = "1.20.1", features = ["full", "tracing"] }
tracing = "0.1.36"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

