[package]
name = "ssh2-rs-port-forward"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
common-port-forward = { path = "../common" }
ctrlc = "3"
ssh2 = "0.9.4"
tracing = "0.1"
