[package]
name = "ssh_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
openssl = { version = "0.10.36", features = ["vendored"] }
pem = "0.8.3"
openssh-keys = "0.5.0"
rust-crypto = "0.2.36"
async-ssh2-lite = "0.2.1"
async-io = "1.6.0"